[package]
name = "yahtzee_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = "0.26"
strum_macros = "0.26"
clap = { version = "4.5.23", features = ["derive"] }
rayon = "1.10.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
